[package]
name = "eightmb"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_14"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# opengl save icon rendering
gl = "0.14.0"
epoxy = "0.1.0"
libloading = "0.9.0"
encoding_rs = "0.8.35"

[build-dependencies]
glib-build-tools = "0.22.0"
