[package]
name = "eightmb-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eightmb = { workspace = true }
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_14"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# opengl save icon rendering
gl = "0.14.0"
epoxy = "0.1.0"
libloading = "0.9.0"
glam = "0.32.1"

[build-dependencies]
glib-build-tools = "0.22.0"
